--- a/index.html
+++ b/index.html
@@ -4,11 +4,26 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/ico" href="/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@48,400,0,0" />
+
     <title>toDo: by alengusinac</title>
   </head>
   <body>
 
-    <header>Hej</header>
+    <!----------------------------HEADER---------------------------------->
+    <header>
+      <button id="sorting-btn" aria-label="button for sorting todo list">
+        <span class="material-symbols-outlined">tune</span>
+      </button>
+      <button id="categories-btn" aria-label="button for changing categories">
+        <span>all categories</span>
+        <span class="material-symbols-outlined">keyboard_arrow_down</span>
+      </button>
+      <button id="adding-btn" aria-label="button for adding todo to list">
+        <span class="material-symbols-outlined">add_box</span>
+      </button>
+    </header>
 
     <main>
       
