--- a/index.html
+++ b/index.html
@@ -16,20 +16,50 @@
 
     <!----------------------------HEADER---------------------------------->
     <header>
+
       <button id="sorting-btn" aria-label="button for sorting todo list">
         <span class="material-symbols-outlined">tune</span>
       </button>
+
       <button id="categories-btn" aria-label="button for changing categories">
         <span>all categories</span>
         <span class="material-symbols-outlined">keyboard_arrow_down</span>
       </button>
+
       <button id="adding-btn" aria-label="button for adding todo to list">
         <span class="material-symbols-outlined">add_box</span>
       </button>
+
     </header>
 
+     <!---------------------ADD ITEM CONTAINER---------------------------->
+    <section class="add-item-container">
+
+      <form action="">
+        <label>
+          title
+          <input type="text" placeholder="ex. Eat Icecream">
+        </label>
+        <label>
+          category
+          <input type="text" placeholder="category">
+        </label>
+        <label>
+          date
+          <input type="date" placeholder="date">
+        </label>
+        <label>
+          time
+          <input type="time" placeholder="time">
+        </label>
+        <button>add toDo</button>
+      </form>
+    </section>
+
     <main>
-      
+      <article class="toDoItem">
+        <button></button>
+      </article>
     </main>
 
     <!-- TODO
