added sort container

--- a/index.html
+++ b/index.html
@@ -32,6 +32,20 @@
 
     </header>
 
+    <!-------------------------SORT CONTAINER----------------------------->
+    <section class="sort-container">
+
+      <h2>sort</h2>
+
+      <button>by Name</button>
+
+      <button>by Deadline</button>
+
+      <button>by Date added</button>
+
+    </section>
+
+
      <!---------------------ADD ITEM CONTAINER---------------------------->
     <section class="add-item-container">
 
