added aria-label to buttons in sort-container

--- a/index.html
+++ b/index.html
@@ -37,11 +37,11 @@
 
       <h2>sort</h2>
 
-      <button>by Name</button>
+      <button id="sort-name-btn" aria-label="sort to do's by name.">by Name</button>
 
-      <button>by Deadline</button>
+      <button id="sort-deadline-btn" aria-label="sort to do's by deadline.">by Deadline</button>
 
-      <button>by Date added</button>
+      <button id="sort-date-added-btn" aria-label="sort to do's by date added.">by Date added</button>
 
     </section>
 
