added toDo item for future JS implementation

--- a/index.html
+++ b/index.html
@@ -72,9 +72,26 @@
 
      <!-----------------------toDo LIST------------------------------>
     <main>
-      <article class="toDoItem">
-        <button></button>
+
+      <article class="todo-item">
+
+        <button>
+          <span class="material-symbols-outlined">task_alt</span>
+        </button>
+
+        <p>Workout - Running</p>
+
+        <div class="time-left">
+          <span class="material-symbols-outlined">hourglass_empty</span>
+          <span>2h 30min</span>
+        </div>
+
+        <button>
+          <span class="material-symbols-outlined">do_not_disturb_on</span>
+        </button>
+        
       </article>
+
     </main>
 
     <!-- TODO
