--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         <span class="material-symbols-outlined">keyboard_arrow_down</span>
       </button>
 
-      <button id="adding-btn" aria-label="button for adding todo to list">
+      <button id="add-btn" aria-label="button for adding todo to list">
         <span class="material-symbols-outlined">add_box</span>
       </button>
 
@@ -44,7 +44,6 @@
       <button id="sort-date-added-btn" aria-label="sort to do's by date added.">by Date added</button>
 
     </section>
-
 
      <!---------------------ADD ITEM MENU---------------------------->
     <section class="add-item-container">
