removed time input, maybe adding later again

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
     </section>
 
      <!---------------------ADD ITEM MENU---------------------------->
-    <section class="add-item-container">
+    <section class="add-item-container open">
 
       <form action="">
         <label>
@@ -59,13 +59,9 @@
         </label>
         <label>
           date
-          <input type="date" placeholder="date">
+          <input type="date">
         </label>
-        <label>
-          time
-          <input type="time" placeholder="time">
-        </label>
-        <button>add toDo</button>
+        <button id="add-item-btn" aria-label="for submitting form.">add toDo</button>
       </form>
     </section>
 
