added buildCategories function

--- a/index.html
+++ b/index.html
@@ -46,6 +46,17 @@
 
       </section>
 
+      <!-------------------------CATEGORIES MENU------------------------->
+      <section class="categories-container">
+
+        <h2>categories</h2>
+
+        <ul>
+          
+        </ul>
+
+      </section>
+
       <!---------------------ADD ITEM MENU---------------------------->
       <section class="add-item-container">
 
@@ -58,8 +69,6 @@
             category <span class="input-error"></span>
             <input list="browse" id="category-input" type="text" placeholder="write a new one or choose from list">
             <datalist id="browse">
-              <option value="Home">
-              <option value="Work">
             </datalist>
           </label>
           <label>
