added category title change when category change

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         </button>
 
         <button id="categories-btn" aria-label="button for changing categories">
-          <span>all categories</span>
+          <span id="category-title">all categories</span>
           <span class="material-symbols-outlined">keyboard_arrow_down</span>
         </button>
 
