added h2 to add item container, refactor css

--- a/index.html
+++ b/index.html
@@ -60,6 +60,8 @@
       <!---------------------ADD ITEM MENU---------------------------->
       <section class="add-item-container">
 
+        <h2>add toDo</h2>
+
         <form onsubmit="return false;" novalidate>
           <label>
             title <span class="input-error"></span>
