added dateInputMinDate function

--- a/index.html
+++ b/index.html
@@ -75,8 +75,7 @@
           </label>
           <label>
             deadline date <span class="input-error"></span>
-            <input id="date-input" type="date"
-          min="2022-12-10" max="2030-12-31" required>
+            <input id="date-input" type="date" required>
           </label>
           <button id="add-item-btn" aria-label="for submitting form." disabled>add toDo</button>
         </form>
