--- a/index.html
+++ b/index.html
@@ -18,16 +18,16 @@
       <!--------------------------HEADER---------------------------------->
       <header>
 
-        <button id="sorting-btn" aria-label="button for sorting todo list">
+        <button id="sorting-btn" aria-label="for sorting todo list">
           <span class="material-symbols-outlined">tune</span>
         </button>
 
-        <button id="categories-btn" aria-label="button for changing categories">
+        <button id="categories-btn" aria-label="for changing categories">
           <span id="category-title">all categories</span>
           <span class="material-symbols-outlined">keyboard_arrow_down</span>
         </button>
 
-        <button id="add-btn" aria-label="button for adding todo to list">
+        <button id="add-btn" aria-label="for adding todo to list">
           <span class="material-symbols-outlined">add_box</span>
         </button>
 
