added category to open item view and fixed text-overflow bugg

--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
         <form onsubmit="return false;" novalidate>
           <label>
             title <span class="input-error"></span>
-            <input id="title-input" type="text" placeholder="ex. Eat Icecream">
+            <input id="title-input" type="text" maxlength="50" placeholder="ex. Eat Icecream">
           </label>
           <label>
             category <span class="input-error"></span>
