--- a/index.html
+++ b/index.html
@@ -6,9 +6,9 @@
     <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
     <link rel="manifest" href="/site.webmanifest">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@48,200,0,0" />
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@48,200,0,0">
     <link rel="preconnect" href="https://fonts.googleapis.com"><link rel="preconnect" href="https://fonts.gstatic.com" crossorigin><link href="https://fonts.googleapis.com/css2?family=Oxygen+Mono&display=swap" rel="stylesheet">
     
     <title>toDo: by alengusinac</title>
@@ -16,7 +16,7 @@
   <body>
     
     <div class="card-container">
-      <!--------------------------HEADER---------------------------------->
+      <!-- HEADER -->
       <header>
 
         <button id="sorting-btn" aria-label="for sorting todo list">
@@ -34,7 +34,7 @@
 
       </header>
 
-      <!-------------------------SORT MENU----------------------------->
+      <!-- SORT MENU -->
       <section class="sort-container">
 
         <h2>sort</h2>
@@ -47,7 +47,7 @@
 
       </section>
 
-      <!-------------------------CATEGORIES MENU------------------------->
+      <!-- CATEGORIES MENU -->
       <section class="categories-container">
 
         <h2>categories</h2>
@@ -58,7 +58,7 @@
 
       </section>
 
-      <!---------------------ADD ITEM MENU---------------------------->
+      <!-- ADD ITEM MENU -->
       <section class="add-item-container">
 
         <h2>add toDo</h2>
@@ -82,7 +82,7 @@
         </form>
       </section>
 
-      <!-----------------------toDo LIST------------------------------>
+      <!-- toDo LIST -->
       <main id="todo-items-container">
       </main>
 
